manifests/hidmo-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hidmo-web
spec:
  selector:
    app: hidmo-web
  ports:
    - name: http
      port: 80
      targetPort: 80
